--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
-spring.sql.init.data-locations=classpath*:/data.sql
-spring.datasource.data=classpath*:db/data.sql
+# spring.sql.init.data-locations=classpath*:/data.sql
+# spring.datasource.data=classpath*:db/data.sql
 spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.defer-datasource-initialization=true
