--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,21 @@
-spring.application.name=back-end
-# H2 Connection
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+# spring.application.name=back-end
+# # H2 Connection
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.username=sa
+# spring.datasource.password=
 
-# H2 Client
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# # H2 Client
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+
+spring.application.name=back-end
+spring.datasource.url=jdbc:postgresql://postgres:5432/mydb
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
 
 
 # Show SQL
